# Pong-3D

./: CMakeLists.txt  README.md
libraries/include/glad/: glad.h
libraries/lib/: glad.c  glfw3.lib
src/: ball.cpp  game.cpp  input.cpp  main.cpp  paddle.cpp  render.cpp  shaders.cpp
src/header/: ball.h  game.h  input.h  paddle.h  shaders.h
